# DataScienceDoc

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
0_resumo/Resumo/: index.html
1_estatistica/Introducao/: index.html
1_estatistica/Introducao_estatistica/: index.html
2_machine_learning/Introducao_machine_learning/: index.html
2_machine_learning/resumo_site/: index.html
5_Ferramentas/5.10_latex/: index.html
5_Ferramentas/5.2_Git/: index.html
5_Ferramentas/5.3_Poetry/: index.html
5_Ferramentas/5.4_Docker/: index.html
5_Ferramentas/5.5_Cookiecutter/: index.html
5_Ferramentas/5.6_Streamilit_Dashboard/: index.html
5_Ferramentas/5.6_Streamlit_Dashboard/: index.html
5_Ferramentas/5.7_Minha_Estrutura/: index.html
5_Ferramentas/5.8_Terminal/: index.html
5_Ferramentas/5.9_mkdocs/: index.html
5_Ferramentas/Introducao_Ferramentas/: index.html
6_Projeto_Cursos/Aula+04+-+Python+para+Data+Science/: index.html
docs/: index.md  sobre.md
docs/0_resumo/: Resumo.md
docs/1_estatistica/: Introducao.md  Introducao_estatistica.md
docs/2_machine_learning/: Introducao_machine_learning.md  resumo_site.md
docs/5_Ferramentas/: 5.10_latex.md  5.2_git.md  5.3_Poetry.md  5.4_docker.md  5.5_Cookiecutter.md  5.5_Cookiecutter_data_science_ccds.md  5.6_Streamlit_Dashboard.md  5.7_Minha_Estrutura.md  5.8_Terminal.md  5.9_mkdocs.md  Introducao_Ferramentas.md
docs/exemplos/: Teste.md  codigo.md  markdown.md
machine_learning/: index.html
search/: search_index.json
site/: 404.html  index.html
sobre/: index.html
(+142 files in other folders)
