[project]
name = "DataScienceDoc"
version = "0.1.0"
description = ""
authors = [
    {name = "Espedito Ferreira Alves",email = "espeditoalves123@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.9,<10.0.0)",
    "mkdocs-ivory (>=0.4.6,<0.5.0)",
    "mkdocs-dracula-theme (>=1.0.7,<2.0.0)",
    "mkdocs-terminal (>=4.7.0,<5.0.0)",
    "mkdocs-custommill (>=1.3.0,<2.0.0)",
    "mkdocs-jupyter (>=0.25.1,<0.26.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
